# starcamera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  starcamera.cpp  starcamera.h  starcamera.pro
include/: apbase.h  apbase_lite.h  aptina.h  datatypes.h  midlib2.h  starcamera.h  starid.h
scripts/centroiding/: ccStarCam.txt  centroidMatlab.txt  centroidStarCam.txt  centroid_comparison.py  test-cc.txt  time2.txt
scripts/featurelist2/: createFeatureList.py  createkVector.py  featureList2.db  kVectorInput.txt
scripts/hip-catalog/: create-database.py  featureList2.db  starnames.txt
src/: CMakeLists.txt  aptina.cpp  main.cpp  starcamera.cpp  starid.cpp
